[package]
name = "ferrotorch-nn"
description = "Neural network modules for ferrotorch — layers, losses, initialization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn-derive = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }

[dev-dependencies]
