[package]
name = "ferrotorch-optim"
description = "Optimizers and learning rate schedulers for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
