[package]
name = "ferrotorch-profiler"
description = "Operation profiling and Chrome trace export for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
ferrotorch-core = { workspace = true }
num-traits = { workspace = true }
cudarc = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
