[package]
name = "ferrotorch-train"
description = "Training loop, metrics, and callbacks for ferrotorch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-nn = { workspace = true }
ferrotorch-optim = { workspace = true }
ferrotorch-data = { workspace = true }
ferrotorch-serialize = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
