[package]
name = "ferrotorch-xpu"
description = "Intel XPU (Arc / Data Center GPU Max) backend for ferrotorch via CubeCL wgpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Default-on: ferrotorch-xpu only makes sense if a real GPU runtime is
# available. The "wgpu" feature wires up the cubecl wgpu runtime which
# targets Intel via the Vulkan API.
default = ["wgpu"]
wgpu = ["ferrotorch-cubecl/wgpu"]

[dependencies]
ferrotorch-core = { workspace = true }
ferrotorch-cubecl = { workspace = true }

# Conformance suite scaffolding (XPU conformance — issue #827):
#   * `toml` parses `_surface_inventory.toml` and `_surface_exclusions.toml`
#     for the Layer-4 strict coverage gate.
#   * `serde`/`serde_json` deserialise the Python-generated fixtures in
#     `tests/conformance/fixtures/fixtures.json`.
# All three are already transitive workspace deps; no new crates pulled.
[dev-dependencies]
toml = "1"
serde = { workspace = true }
serde_json = { workspace = true }
